--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
     .hero {
       font-family: 'Gabarito', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      font-size: clamp(3.75rem, 9.5vw, 8rem);
+      font-size: clamp(2.8rem, 9vw, 8rem);
       font-weight: 700;
       letter-spacing: -0.02em;
       margin: 0;
-      white-space: nowrap;
+      text-wrap: balance;
     }
 
     .tagline {
@@ -92,6 +92,12 @@
       margin: 0;
       color: var(--ink-soft);
       font-weight: 400;
+    }
+
+    @media (min-width: 520px) {
+      .hero {
+        white-space: nowrap;
+      }
     }
   </style>
 </head>
