--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       max-width: 420px;
       aspect-ratio: 1 / 1;
       background: radial-gradient(circle at 30% 30%, var(--accent), transparent 60%);
-      filter: blur(60px);
-      opacity: 0.7;
+      filter: blur(80px);
+      opacity: 0.9;
       z-index: 0;
       transform: translate3d(0, 0, 0);
     }
@@ -73,7 +73,7 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
-      gap: 3rem;
+      gap: 2rem;
       margin: 0 auto;
     }
 
@@ -81,17 +81,17 @@
       font-family: 'Gabarito', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       font-size: clamp(2.8rem, 9vw, 8rem);
       font-weight: 700;
-      letter-spacing: -0.02em;
+      letter-spacing: -0.035em;
       margin: 0;
       text-wrap: balance;
     }
 
     .tagline {
-      font-size: clamp(0.85rem, 1.8vw, 1.15rem);
+      font-size: clamp(1rem, 1.8vw, 1.15rem);
       line-height: 1.5;
       margin: 0;
       color: var(--ink-soft);
-      font-weight: 400;
+      font-weight: 600;
     }
 
     @media (min-width: 520px) {
@@ -104,11 +104,9 @@
 
 <body>
   <main class="page">
+    <p class="tagline">We build beautiful, intuitive software solutions that in hindsight seem...</p>
     <h1 class="hero">Super Obvious.</h1>
-    <p class="tagline">We build intuitive solutions that also seem <strong>super obvious</strong> in hindsight<br /> for
-      problems that
-      few
-      people imagine are solvable.</p>
+
   </main>
 </body>
 
