Add google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHL1CCB341"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-KHL1CCB341');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Super Obvious</title>
@@ -66,6 +75,7 @@
     }
 
     @media (max-width: 640px) {
+
       body::before,
       body::after {
         inset: 5% auto auto -10%;
@@ -124,5 +134,6 @@
 
   </main>
 </body>
+
 
 </html>
